--- a/FunciSNP/inst/doc/FunciSNP_vignette.Rnw
+++ b/FunciSNP/inst/doc/FunciSNP_vignette.Rnw
@@ -1,97 +1,165 @@
 %\VignetteIndexEntry{FunciSNP Vignette}
-%\VignetteDepends{}
-%\VignetteKeywords{SNP Functional GWAS}
+%\VignetteDepends{FunciSNP}
+%\VignetteKeywords{SNP}
+%\VignetteKeywords{Functional}
+%\VignetteKeywords{GWAS}
 %\VignettePackage{FunciSNP}
-\documentclass[a4paper]{article}
-\usepackage[OT1]{fontenc}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\documentclass[12pt,fullpage]{article}
+\usepackage{amsmath,epsfig,fullpage}
+\usepackage{hyperref}
+\usepackage{url}
+\usepackage[authoryear,round]{natbib}
+%\usepackage[OT1]{fonitenc}
 \usepackage{Sweave}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\Rfunction}[1]{{\texttt{#1}}}
+\newcommand{\Robject}[1]{{\texttt{#1}}}
+\newcommand{\Rpackage}[1]{{\textit{#1}}}
+\newcommand{\Rclass}[1]{{\textit{#1}}}
+\newcommand{\Rmethod}[1]{{\textit{#1}}}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\author{Simon G. Coetzee$^\ddagger$\footnote{scoetzee@gmail.com}, Suhn
+Rhie$^\ddagger$, Gerhard A. Coetzee$^\ddagger$ and Houtan
+Noushmehr$^\ddagger$\footnote{houtana@gmail.com}}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
-\title{Vignette\\FunciSNP: Functional Identification of SNPs with
-\\Phenotype by Coincidence with Chromatin Biofeatures}
-\author{Simon G. Coetzee, Suhn Rhie, Gerhard A. Coetzee and Houtan 
-Noushmehr\\\\Norris Cancer Center\\Keck School of Medicine\\University
- of Southern California\\Los Angeles, USA.
-}
-
+\title{Using the FunciSNP package\\`Functional Identification of SNPs with\\
+Phenotype by Coincidence with Chromatin Biofeatures'}
 \maketitle
-\section*{Introduction}
-FunciSNP assist in identifying putative functional SNP from previously
- identified GWAS SNPs (tagSNP). Using information from the 1000 genomes 
- database as well as known position of GWAS tagSNP currated for a particular 
- trait or disease, FunciSNP integrates the two data along with sequence 
- information provided by peaks identified from high-throughput sequencing. 
- FunciSNP assumes user will provide peaks identified using any available 
- ChIP peak algorithm, such as FindPeaks.
 
-This vignette provides a 'HOW-TO' guide to setup and run FunciSNP on your 
-machine. FunciSNP was developed with the idea that a user will have 
-uninterupted high-speed internet access as well as a desktop machine with 
-more than 4 multiple cores. If user is using a windows machine, multiple
- cores options will not work and thus total time to complete initial FunciSNP
-  analysis will take longer than expected. Be sure you have uninterupted 
-  computing power when using a windows machine. If using a linux machine, 
-  please use 'screen' (see man screen for more information).
+%%% Affiliation %%%
+\begin{center}
+$^\ddagger$Norris Cancer Center\\Keck School of
+Medicine\\University of Southern California\\Los Angeles, CA,
+USA
+\end{center}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\tableofcontents
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Introduction}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+FunciSNP assist in identifying putative functional SNP from previously
+identified GWAS SNPs (tagSNP). Using information from the 1000 genomes database
+as well as known position of GWAS tagSNP currated for a particular trait or
+disease, FunciSNP integrates the two data along with sequence information
+provided by peaks identified from high-throughput sequencing. FunciSNP assumes
+user will provide peaks identified using any available ChIP peak algorithm, such
+as FindPeaks.
+
+It will identify correlated SNPs which are in linkage disequilibrium (LD) to a
+known disease associated tagSNP. It will also determine if the correlated SNP in
+LD to the tagSNP overlaps a genomic biological feature. Correlated SNPs are
+directly imported from the current public release of the 1000 genomes database.
+1000 genomes ftp servers available for the 1000 genomes public data: 
+
+\begin{itemize}
+\item National Center for Biotechnology Information
+(NCBI)\footnote{\url{ftp://ftp-trace.ncbi.nih.gov/1000genomes/}}
+\item European Bioinformatics Institute
+(EBI)\footnote{\url{ftp://ftp.1000genomes.ebi.ac.uk/vol1/}}
+\end{itemize}
+
+Correlated SNPs in LD to a tagSNP and overlapping genomic biological features
+are known as putative functional SNPs (also defined as 'FuncySNP' elsewhere in
+the package).
+
+This vignette provides a 'HOW-TO' guide to setup and run FunciSNP on your
+machine. FunciSNP was developed with the idea that a user will have uninterupted
+high-speed internet access as well as a desktop machine with  more than 4
+multiple cores. If user is using a windows machine, multiple cores options will
+not work and thus total time to complete initial FunciSNP analysis will take
+longer than expected. Be sure you have uninterupted computing power when using a
+windows machine. If using a linux machine, please use 'screen' (see man screen
+for more information).
 
 Using a 64bit Linux machine running 11.04 Ubuntu OS with 24G RAM and 8 cores
- connected to a academic high-speed internet port, the amount of time to 
- complete 99 tagSNP across 20 different biofeatures took less than 30 min
- to complete. We anticipate about 2 hours to complete the same analysis 
- using one core.
-\section*{Load FunciSNP+other useful libraries}
-<<packages>>=
-#When package is offically posted in Bioconductor, uncomment next 2 lines.
-#source("http://bioconductor.org/biocLite.R")
-#biocLite("FunciSNP");
-## Following two packages and options() are not required to run 'FunciSNP' but 
-#will enhance the analysis experience.
-#library(setwidth); ## Automatically set the value of options("width") when the 
-#terminal emulator is resized
-#library(colorout); ## colorize R output on terminal emulators
-options(width=80);
-##FunciSNP library and other related libraries needed.
-library("org.Hs.eg.db");
-library("gplots");
-library("gtools");
-library("ggplot2");
-library("matlab");
+connected to a academic high-speed internet port, the amount of time to complete
+99 tagSNP across 20 different biofeatures took less than 30 min to complete. We
+anticipate about 2 hours to complete the same analysis using one core.
 
+\subsection{GWAS SNP}
+Something about GWAS SNP goes here.
+
+\subsection{1000 genomes project}
+Something about the 1000GP aims and initiative goes here. 
+
+\subsection{Genomic features}
+Something about peak calling and available data (public/private).
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Installing and Loading FunciSNP}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+There are two options available to obtain a copy of \Rpackage{FunciSNP}: 
+
+\begin{itemize}
+\item Download current source code from Coetzeesq's
+lab\footnote{\url{http://coetzeeseq.usc.edu/publication/Coetzee_SG_et_al_2012/}}
+\item Download and install from
+Bioconductor\footnote{\url{http://www.bioconductor.org}}
+\end{itemize}
+
+If you download the source code from either method above, you can install
+\Rpackage{FunciSNP} by typing the following in your favorite unix terminal. If
+you are using a non-unix terminal, please visit R CRAN for more guidance on how
+to install a package from source.
+
+By installing \Rpackage{FunciSNP} from source, the package assumes you have all
+the required libraries installed.
+
+The following loads the \Rpackage{FunciSNP} library in R.
+
+<<packages>>=
+options(width=80);
 library(FunciSNP);
 package.version("FunciSNP");
 @
 
-\section*{Identify FuncySNP using published GWAS SNPs and publicly available 
-biological features (ENCODE ChIPseq peaks)}
-\subsection*{FuncySNP()}
-This section describes the main function of FunciSNP. 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Running FuncySNP to identify putative functional SNPs}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-It will identify correlated SNPs which are in linkage disequilibrium (LD) 
-to a known disease associated tagSNP. It will also determine if the 
-correlated SNP in LD to the tagSNP overlaps a genomic biological feature. 
-Correlated SNPs are directly imported from the current public release of 
-the 1000 genomes database. 1000 genomes ftp servers available for the 
-1000 genomes public data: 1) National Center for Biotechnology Information 
-(NCBI) ftp://ftp-trace.ncbi.nih.gov/1000genomes/; 2) European Bioinformatics
-Institute (EBI) ftp://ftp.1000genomes.ebi.ac.uk/vol1/.
+Before we can run FuncySNP, we will need two input files. A list of tagSNp and a
+folder with all available biological features (peak files in BED format).
 
-Correlated SNPs in LD to a tagSNP and overlapping genomic biological features 
-are known as putative functional SNPs (also defined as 'FuncySNP' elsewhere in
- the package.).
+\subsection{Create a GWAS SNP file}
 
-As an example, we collected SNPs identified by GWAS for Glioblastoma multiforme 
-(GBM). In this example, GBM includes lower grade glioma, thus the use of 'glioma'
- to label all objects.
+GWAS SNPs (tagSNP) should be listed in a tab or whitespace separated file. Three
+columns are required for each tagSNP: 
 
-GWAS SNPs file should be in a tab or whitespace separated file. Three 
-columns are required for each GWAS tagSNP. Position, rsID, population.
-Positon should be the exact postion for each rsID as determined by human
- genome build hg19 (Chromosome:Postion). rsID should contain a unique 
- rsID as determined by the 1000 genomes database for each identified GWAS
-  tagSNP. Population should be a three letter code to determine original 
-  ethnic population for which the associated tagSNP was identified. The 
- three letter code should be either European (EUR), Asian (ASN), African 
- (AFR), American (AMR), or All (ALL). List each tagSNP for multiple ethnic 
- population.
+\begin{itemize}
+\item Position (chrom:position)
+\item rsID (rsXXXXXXXX)
+\item population (EUR, AFR, AMR, ASN, or ALL)
+\end{itemize}
+
+`Positon' should be the exact postion for each rsID as reported by human genome
+build hg19 (chrom:postion). `rsID' should contain a unique rsID as determined by
+the 1000 genomes database (1000GP)\footnote{Be sure the rsID is located in this
+browser: \url{http://browser.1000genomes.org/}} for each identified `tagSNP'.
+Population should be a three letter code to determine original ethnic population
+for which the associated `tagSNP' was identified. The three letter code should
+be either European (EUR), Asian (ASN), African (AFR), American (AMR), or All
+(ALL). List each tagSNP per ethnic population. If similar rsID was identified in
+multiple ethnic population, list each duplicate tagSNP separately with the
+appropriate ethnic pouplation.
+
+As an example, we collected several GWAS SNPs significantly associated with
+Glioblastoma multiforme (GBM)\footnote{See
+\url{http://www.snpedia.com/index.php/Glioma}}. GBM is a brain cancer with
+median survival at less than 12 months, making this form of cancer one of the
+most aggressive of all cancer types. In this example, GBM includes lower grade
+glioma, therefore we use the 'glioma' to label all objects.
+
 <<>>=
 ## Full path to the example GWAS SNP regions file for Glioblastoma 
 #  (collected from SNPedia on Jan 2012)
@@ -100,24 +168,55 @@ dir(system.file('extdata',package='FunciSNP'), pattern='.snp$'));
 gsnp <- read.delim(file=glioma.snp,sep=" ",header=FALSE);
 gsnp;
 @
+
+Now, \Robject{glioma.snp} contains the full path to the GWAS tagSNP. 
+
+\subsection{Biofeatures in BED format}
+
 Each biofeature used to identify correlated SNP should be in standard BED
- format. All biofeatures should be stored in one folder and should have 
- file extension .bed. Here is an example of three different biofeatures
-  used for the glioma example.
+format\footnote{See UCSC FAQ: \url{http://genome.ucsc.edu/FAQ/FAQformat}}. Each
+biofeature should be stored in one folder and should have file extension
+`*.bed'.
+
+Here is an example of three different biofeatures used for this glioma example.
+NRSF and PolII (both transcription factors) where extracted from a recent
+release of ENCODE, as well as promoters of approximately 38,000 gene
+transcription start sites (TSS). Promoters are identified as +1000 to -100 base
+pair of each annotated TSS.
+
 <<>>=
-#glioma.snp;
 ## Full path to the example biological features BED files 
 #  derived from the ENCODE project for Glioblastoma U-87 cell lines.
 glioma.bio <- system.file('extdata',package='FunciSNP');
-list.files(glioma.bio, pattern='.bed$');
+as.matrix(list.files(glioma.bio, pattern='.bed$'));
 nrsf.filename <- list.files(glioma.bio, pattern='.bed$')[2];
+pol2.filename <- list.files(glioma.bio, pattern='.bed$')[3];
+prom.filename <- list.files(glioma.bio, pattern='.bed$')[1];
 Nrsf <- read.delim(file=paste(glioma.bio, nrsf.filename,sep="/"), sep="\t",
-        header=FALSE);
+header=FALSE);
+PolII <- read.delim(file=paste(glioma.bio, pol2.filename,sep="/"), sep="\t",
+header=FALSE);
+Promoters <- read.delim(file=paste(glioma.bio, prom.filename,sep="/"), sep="\t",
+header=FALSE);
+dim(Nrsf);
+dim(PolII);
+dim(Promoters);
+## Example of what the BED format looks like:
 head(Nrsf);
 @
-Following will take about 10 min to run.
+
+As an example, \Robject{Nrsf} was created to illustrate the format needed for
+each biofeatures. To run FuncySNP, only the path to the folder to each
+biofeature is required (\Robject{glioma.bio}.
+
+\subsection{FuncySNP analysis using two inputs}
+
+To run the example data could take more than 5 minutes, thus the R code is
+commented out for this tutorial. If you are interested in running the glioma
+example from scratch, please uncomment the following and rerun in your R
+session. (The main function of FunciSNP is \Rmethod{FuncySNP}.)
+
 <<>>=
-#glioma.bio;
 ## FunciSNP analysis, extracts correlated SNPs from the 
 #  1000 genomes db ("ncbi" or "ebi") and finds overlaps between 
 #  correlated SNP and biological features and then 
@@ -130,22 +229,64 @@ Following will take about 10 min to run.
 # glioma;
 # summary(glioma);
 @
-If you decide not to run 'FuncySNP', you can call the results as
- follows. This was precompiled to provide user an example dataset to work 
- with in this tutorial.
+
+As an alternative, \Robject{glioma} was pre-run and stored in the package as an
+R object. To call this data object, simily run the following commands. 
+
 <<>>=
 data(glioma);
-glioma;
-summary(glioma);
 class(glioma);
 @
 
-\subsection*{Annotating newly identified FuncySNPs}
-All known genomic features (exon, intron, 5'UTR, 3'UTR, promoter, lincRNA or in 
-gene desert (intergentic)) are used to annotate each newly identified FuncySNP.
- Information described in this data.frame() is used for all summary plots, table, 
- and to output results in BED format. This step should be completed after 
- running FuncySNP().
+Now, \Robject{glioma} contains the R data structure that holds all the results
+for this particular analysis. Each tagSNP is stored as a slot which contains
+associated correlated SNP and overlapping biofeature. It also contains a number
+of different annotations (see below for more details). To see a brief summary of
+the results (\Rmethod{summary}), type the following commands:
+
+<<>>=
+glioma;
+@
+
+As you can quickly observe from the above analysis, using 4 tagSNPs position and
+3 different biological features (ChIPseq for `NRSF', `PolII', promoters of
+approx. 38,000 genes) as two types of input, FunciSNP identified 778 1000GP SNPs
+that overlap at least one biofeature. Each 1000GP SNP contains an Rsquare value
+to the associated tagSNP. As a result, the first output (\Robject{glioma}),
+summarizes the analysis subsetted in three different Rsquare values (0.1, 0.5
+and 0.9). If we consider Rsquare cutoff at 0.9 (Rsquare $\ge$ 0.9), 13 1000GP SNPs
+overlapping at least one biofeature. This value represents 1.67\% of the total
+(778). In addition, at this Rsquare cutoff, 2 biological features are
+represented among the 13 1000GP SNPs.
+
+<<>>=
+summary(glioma);
+@
+
+Running \Rmethod{summary} however will output a slightly different report yet
+just as informative. At three different Rsquare cutoffs (0.1, 0.5, 0.9), the
+summary output illustrates the tagSNP with the total number of 1000GP SNPs
+overlapping a total number of biofeatures. For example, at Rsquare $\ge$ 0.5,
+tagSNP `rs6010620' is assocated with 40 different 1000GP SNPs which overlap at
+least one biofeature, and 6 of them overlap at least two biofeatures.
+
+Each newly identified 1000GP SNP is now defined as putative functional SNP since
+they are in LD to an associated tagSNP and they overlap at least one interesting
+biological feature. Thus, each 1000GP SNP is now characterized as
+`\textbf{Func-y-SNP}.'
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Annotating newly identified Func-y-SNPs}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+All known genomic features (exon, intron, 5'UTR, 3'UTR, promoter, lincRNA or in
+gene desert (intergentic)) are used to annotate each newly identified Func-y-SNP
+as described above. Information stored in this \Robject{glioma.anno} is used for
+all summary plots, table, and to output results in BED format (see following
+sections for more details). The following step will output the data.frame.
+
 <<>>=
 glioma.anno <- FunciSNPAnnotateSummary(glioma);
 class(glioma.anno);
@@ -153,102 +294,166 @@ gl.anno <- glioma.anno;
 ## remove rownames for this example section.
 rownames(gl.anno) <- c(1:length(rownames(gl.anno)))
 dim(gl.anno);
-head(gl.anno); ## 
+head(gl.anno[,c(1:18,20:28)]); ## 
 names(gl.anno);
 summary(gl.anno[,c(1:18,20:28)]);
 rm(gl.anno);
 @
-\subsection*{Summary table used to describe newly identified FuncySNPs}
-Using a specified Rsquare value (0-1) to subset the data, a table is generated 
-which summarizes the total number of FuncySNPs, associated tagSNPs, and number
- of overlapping biofeatures. This will provide user a first look at the total 
- number of available FuncySNP at a particular Rsquare cutoff.
+
+As you can see, each tagSNP (`tag.snp.id') is associated with an identifiable
+Func-y-SNP (`corr.snp.id') and each are associated with a biological feature
+(`bio.feature'). Additional columns are included which assist in summarizing the
+final results.
+
+Now, if you prefer, you can use several functions to help summarize and plot
+the final analysis or you can use your own set of scripts to further summarize
+the results.  Either case, the final results are stored in
+\Robject{glioma.anno}.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Summarize FunciSNP results}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+The following sections describe methods to summarize and plot the newly
+identified Func-y-SNPs.
+
+\subsection{Summary table used to describe newly identified Func-y-SNPs}
+
+Using a specified Rsquare value (0-1) to subset the data, a table is generated
+which summarizes the total number of Func-y-SNPs, associated tagSNPs, and number
+of overlapping biofeatures. This will provide user a first look at the total
+number of available Func-y-SNP at a particular Rsquare cutoff.
+
+The output is very similar to the output generated by calling \Robject{glioma}.
+But instead of getting a summary report three distinct Rsquare cutoffs, you can
+now specify the Rsquare cutoffs.  In this case, we used rsq=0.44.
+
 <<>>=
-FunciSNPtable(glioma.anno, rsq=0.5);
+FunciSNPtable(glioma.anno, rsq=0.44);
 @
-If 'geneSum' is set to TRUE, a list of gene names is reported instead.
+
+If `geneSum' argument is set to `TRUE', a list of gene names is reported
+instead which informs on the nearest gene symbols to the set of Func-y-SNPs.
+Only unique gene symbols are reported since multiple distinct Func-y-SNP can be
+near the same gene.
+
 <<>>=
-FunciSNPtable(glioma.anno, rsq=0.5, geneSum=TRUE);
+FunciSNPtable(glioma.anno, rsq=0.44, geneSum=TRUE);
 @
-\subsection*{Summary of correlated SNPs overlapping biofeatures}
-This function helps in determining the number of correlated SNPs overlapping 
-a number of different biofeatures. This is similar to running 'summary(glioma)'
-above, except now you can specifically call the function and set a 
-pre-determined 'rsq' value to subset the data and thereby obtain a 
-more objective and informative result.
+
+\subsection{Summary of correlated SNPs overlapping biofeatures}
+
+The following function (\Rmethod{FunciSNPsummaryOverlaps} helps to determine the
+total number of Func-y-SNPs overlapping a number of different biofeatures. This
+is similar to running \Rmethod{summary} on \Robject{glioma} above, except now
+you can specifically call the function and set a pre-determined 'rsq' value to
+subset the data and thereby obtain a more objective and informative result.
+
 <<>>=
 FunciSNPsummaryOverlaps(glioma.anno)
 @
+
 Using a 'rsq' value, the output is subsetted to summarize the results with 
-Rsquare values greater than or equal to 'rsq'.
+Rsquare values $\ge$ 'rsq'.
+
 <<>>=
-FunciSNPsummaryOverlaps(glioma.anno, rsq=0.5)
+FunciSNPsummaryOverlaps(glioma.anno, rsq=0.44)
 @
-\subsection*{Summary of correlated SNPs for a number of different tagSNPs}
-After running FunciSNPsummaryOverlaps(), the next question one would like to 
-know is which correlated SNPs overlapping a number of different biofeatures 
-for a number of associated tagSNP. Thus, in the example above, we have 
-determined that we are interested in learning more about the correlated 
-SNPs associated with 'rs6010620' and which overlap at least 2 different 
-biofeatures.
+
+\subsection{Summary of correlated SNPs for a number of different tagSNPs}
+
+After running \Rmethod{FunciSNPsummaryOverlaps}, the next question one would
+like to know is which correlated SNPs overlapping a number of different
+biofeatures for a number of associated tagSNP. Thus, in the example above, we
+have determined that we are interested in learning more about the Func-y-SNPs
+associated with 'rs6010620' and which overlap at least 2 different biofeatures.
+
 <<>>=
-rs6010620 <- FunciSNPidsFromSummary(glioma.anno, tagsnpid="rs6010620", 
-        num.features=2, rsq=0.5)
-summary(rs6010620);
+rs6010620 <- FunciSNPidsFromSummary(glioma.anno, tagsnpid="rs6010620",
+num.features=2, rsq=0.44);
+#summary(rs6010620);
 dim(rs6010620);
 class(rs6010620);
 ## See FunciSNPbed to visualize this data in a genome browser.
 @
 
-\newpage
-\subsection*{Plot FunciSNP results}
-FunciSNPplot is a function developed to plot various types of plots to summarize
- and assist end-user in making informed discoveries of FunciSNP results. Plots 
- can be stored in a folder for future reference. Most plots were created in 
- publication standard.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Plot FunciSNP results}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\Rmethod{FunciSNPplot} is a function developed to plot various types of plots to
+summarize and assist end-user in making informed discoveries of FunciSNP
+results. Plots can be stored in a folder for future reference. Most plots were
+created in with the idea that they can be directly outputted in presentations or
+publication formats.
 
 The following example plots the distribution of the Rsquare values for each
-correlated SNP. We recommend attempting this plot before subsetting any data 
-by a specified rsq value.  The distribution helps to identify a specific Rsquare
- value that will provide the most informative discovery.
+Func-y-SNP (Figure \ref{fig:glioma_dist.pdf}). We recommend attempting this plot
+before subsetting any data by a specified rsq value. The distribution helps to
+identify a specific Rsquare value that will provide the most informative
+discovery.
+
 <<>>=
 pdf("glioma_dist.pdf")
 FunciSNPplot(glioma.anno)
 dev.off()
 @
+
 \begin{figure}[ht!]
 \begin{center}
 \includegraphics{glioma_dist.pdf}
 \caption{\label{fig:glioma_dist.pdf} Distribution of Rsquare values of all 
-Correlated SNPs. Each marked bin contains the total number of correlated SNPs. The
- sum of all the counts would total the number of correlated SNPs.}
+Func-y-SNPs. Each marked bin contains the total number of Func-y-SNPs
+(correlated SNPs). The sum of all the counts would total the number of
+correlated SNPs.}
 {\footnotesize{}}
 \end{center}
 \end{figure}
-Using splitbysnp argument, the same type of plot as above (Figure 
-        \ref{fig:glioma_dist.pdf}) is generated, however the total number of 
-correlated SNPs are divided by the associated tagSNP.
+
+Figure \ref{fig:glioma_dist.pdf} illustrates the total number of Func-y-SNPs
+binned at different Rsquare cutoffs. As you can see in this figure
+(\ref{fig:glioma_dist.pdf}, there are a total of 11 Func-y-SNP with an Rsquare
+$\ge$ 0.9. Since this plot does not take into consideration unique Func-y-SNP
+the number may represent duplicate Func-y-SNP since they may overlap more than
+one biological feature.
+
+Using `splitbysnp' argument, the same type of plot as above (Figure
+\ref{fig:glioma_dist.pdf}) is generated, however the total number of Func-y-SNPs
+are now divided by the associated tagSNP (Figure
+\ref{fig:glioma_dist_bysnp.pdf}). It should be clear from this plot that 3 of
+the 4 tagSNP have a number of Func-y-SNP with Rsquares $\ge$ 0.5.  And one
+tagSNP contains many more Func-y-SNP (`rs6010620').
+
 <<>>=
 FunciSNPplot(glioma.anno, splitbysnp=TRUE)
 ggsave("glioma_dist_bysnp.pdf")
 @
+
 \begin{figure}[ht!]
 \begin{center}
 \includegraphics{glioma_dist_bysnp.pdf}
 \caption{\label{fig:glioma_dist_bysnp.pdf} Distribution of Rsquare values of all
- Correlated SNPs divided by the tagSNP and it's location.}
+ Func-y-SNPs divided by the tagSNP and by its genomic location.}
 {\footnotesize{}}
 \end{center}
 \end{figure}
-Using genomicSum argument set to TRUE will output the overall genomic 
-distribution of the newly identified correlated SNPs.  Using 'rsq' value, the 
-plot is divided into all correlated SNPs vs subset. This type of plot informs the 
-relative enrichment for genomic features.
+
+Using `genomicSum' argument set to `TRUE' will output the overall genomic
+distribution of the newly identified Func-y-SNPs (Figure
+\ref{fig:glioma_genomic_sum_rcut.pdf}).  Using 'rsq' value, the plot is divided
+into all Func-y-SNPs vs subset. This type of plot informs the relative
+enrichment for genomic features.
+
 <<>>=
 pdf("glioma_genomic_sum_rcut.pdf")
 FunciSNPplot(glioma.anno, rsq=0.5, genomicSum=TRUE, save=FALSE)
 dev.off()
 @
+
 \begin{figure}[ht!]
 \begin{center}
 \includegraphics{glioma_genomic_sum_rcut.pdf}
@@ -259,21 +464,23 @@ all correlated SNPs for each of the identified genomie features: exon, intron,
 {\footnotesize{}}
 \end{center}
 \end{figure}
-'tagSummary' argument is unique in that it will automatically save all plots in a
-specific folder. This is done because this function will generate a summary 
-plot for each biofeature.  The first plot (Figure 
-        \ref{fig:TFBS_Pol2_U87_R2vsDist_riskSNP.pdf}) is a scatter plot showing 
-the relationship between Rsquare and Distance to tagSNP for each FuncySNP. The
- second plot (Figure \ref{fig:TFBS_Pol2_U87_R2summary_riskSNP.pdf}) is a 
- histogram distribution of total number of correlated SNPs at each 
- Rsquare value. This plot is similar to Figure \ref{fig:glioma_dist_bysnp.pdf}, 
- except it is further divided by biofeature. Each set of plot is further divided 
- by tagSNP to help identify locus with the most identifiable FuncySNP. This argument
- is best used in conjunction with a 'rsq' value.
+
+Figure \ref{fig:glioma_genomic_sum_rcut.pdf} illustrates the distribution of the
+Func-y-SNP by genomic features. It is clear by using an Rsquare cutoff of 0.5,
+there is a slight enrichment of Func-y-SNP in introns and exonds and a depletion
+at promoters and other coding regions as well as intergentic regions.
+
 <<>>=
 ## Following will output a series of plots for each biofeature at rsq=0.5
 FunciSNPplot(glioma.anno, tagSummary=TRUE, rsq=0.5)
 @
+
+Using `tagSummary' argument will automatically save all plots in a specific
+folder. This is done because this function will generate a summary plot for each
+biofeature. The first plot (Figure \ref{fig:TFBS_Pol2_U87_R2vsDist_riskSNP.pdf})
+is a scatter plot showing the relationship between Rsquare and Distance to
+tagSNP for each Func-y-SNP. 
+
 \begin{figure}[ht!]
 \begin{center}
 \includegraphics{FunciSNP.0.1.8/plots/TFBS_Pol2_U87_R2vsDist_riskSNP.pdf}
@@ -283,6 +490,19 @@ FuncySNP}
 {\footnotesize{}}
 \end{center}
 \end{figure}
+
+Figure \ref{fig:TFBS_Pol2_U87_R2vsDist_riskSNP.pdf} helps identify the relative
+postion of all newly identified Func-y-SNP to the associated tagSNP. As
+hiighlighted in figure \ref{fig:TFBS_Pol2_U87_R2vsDist_riskSNP.pdf}, it si clear
+that tagSNP `rs6010620' contains many more Func-y-SNP with Rsquares $\ge$ 0.5,
+and the majority of them are within 40,000 base pairs of the tagSNP. There are a
+few Func-y-SNP which are more than 50,000 base pairs away while some are within
+5,000 base pairs.
+
+The second plot (Figure \ref{fig:TFBS_Pol2_U87_R2summary_riskSNP.pdf}) is a
+histogram distribution of total number of Func-y-SNPs at each Rsquare value.
+This plot is similar to Figure \ref{fig:glioma_dist_bysnp.pdf}, except it is
+further divided by biofeature. Each set of plot is further divided by tagSNP to help identify locus with the most identifiable Func-y-SNP. This argument is best used in conjunction with a 'rsq' value.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -295,34 +515,53 @@ distribution of number of correlated SNPs at each Rsquare value}
 
 \newpage
 
-\subsection*{Output results in BED format - visualize results}
-Finally, after evaluating all results using the above tables and plots functions,
- a unique pattern emerges that helps identifies a unique cluster of tagSNP 
- and biofeature that can identify a set of FuncySNPs. To better visualize 
- and to get a better perspective of the location of each newly identified 
- FuncySNP, the results can be outputted using FunciSNPbed.
 
-  FunciSNPbed outputs a unique BED file which can be used to view in any genomic 
-browser compatible with BED formats. To learn more about BED formats, see UCSC 
-Genome Browser FAQ (http://genome.ucsc.edu/FAQ/FAQformat). Each tagSNP 
-which is in LD to a corresponding FuncySNP overlapping at least one biofeature
- is colored black, while the FuncySNP is colored red. The initial position is 
- provided by the first tagSNP and the first linked FuncySNP. We recommend 
- using UCSC genome browser to view your BED files. This is useful so you can 
- view all public and private tracks in relation to FunciSNP results.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Visualize FunciSNP results in a genomic browser (outputs BED format)}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+Finally, after evaluating all results using the above tables and plots
+functions, a unique pattern emerges that helps identify a unique cluster of
+tagSNP and biofeature that can identify a set of Func-y-SNPs. To better
+visualize and to get a better perspective of the location of each newly
+identified Func-y-SNP, the results can be outputted using \Rmethod{FunciSNPbed}.
+
+\Rmethod{FunciSNPbed} outputs a unique BED file which can be used to view in any
+genomic browser which supports BED formats. To learn more about BED formats, see
+UCSC Genome Browser FAQ (\url{http://genome.ucsc.edu/FAQ/FAQformat}). 
+
 <<>>=
 ## will output to current working directory.
 FunciSNPbed(glioma.anno, rsq=0.5);
 # FunciSNPbed(rs6010620, rsq=0.5);
 @
 
-\newpage
+Each tagSNP which is in LD to a corresponding Func-y-SNP overlapping at least
+one biofeature is colored black, while the Func-y-SNP is colored red. The
+initial position is provided by the first tagSNP and the first linked
+Func-y-SNP. We recommend using UCSC genome browser to view your BED files. This
+is useful so you can view all public and private tracks in relation to FunciSNP
+results.
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Contact information}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Questions or comments, please contact Simon G. Coetzee (scoetzee NEAR gmail 
  POINT com) or Houtan Noushmehr (houtana NEAR gmail POINT com).
 
-<<sessionInfo>>=
-sessionInfo()
-@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{sessionInfo}                                                            
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+<<results=tex,echo=false>>=                                                      
+toLatex(sessionInfo())                                                           
+@ 
 
 \end{document}
